--- a/site/public/stylesheets/pages/medios.css
+++ b/site/public/stylesheets/pages/medios.css
@@ -118,6 +118,11 @@ font-size: 14px;
       position: relative;
     top: -12px;}
 
+    .confirm-msg-contact{
+     font-size: 16px;
+     color: green;
+    }
+
 
 @media (min-width: 768px) {
 
