--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -11,6 +11,7 @@
 @import 'modal2.css';
 @import 'spinner.css';
 @import 'pages/medios.css';
+@import 'pages/messages.css';
 /*VARIABLES*/
 
 :root {
