--- a/site/views/Users/partials/header.ejs
+++ b/site/views/Users/partials/header.ejs
@@ -80,7 +80,7 @@
             
             <a href="#link1">Mi perfil</a>
             <a href="#link2">Editar Perfil</a>
-            <a href="#link3">Mensajes</a>
+            <a href="/admin/list">Mensajes</a>
             
           </div>
         </div>
