--- a/site/views/Admin/productLoad.ejs
+++ b/site/views/Admin/productLoad.ejs
@@ -51,6 +51,7 @@
         <div class="form-checkbox"><label for="cover_page" class="form-label">Producto en portada:</label>
           <input class="form-radio" type="checkbox" name="cover_page" id="cover_page" value="1">
       </div>
+      
       <h2 class="form-title">C<span>aracterísticas</span></h2>
       <label for="varietal" class="form-label">Varietal:</label>
       <input type="text" id="varietal" class="form-input" name="varietal" placeholder="Tipo de uva" required>
@@ -106,6 +107,7 @@
 
   <%- include('./partials/footer')  %> 
 <script src="/javascripts/ButtonImage.js"></script>
+<script src="/javascript/productValidator.js"></script>
 
 </body>
 
