trabajando en usuarios

--- a/site/views/Users/partials/header.ejs
+++ b/site/views/Users/partials/header.ejs
@@ -79,8 +79,8 @@
           <div class="subnav-content">
             
             <a href="#link1">Mi perfil</a>
-            <a href="#link2">Editar Perfil</a>
-            <a href="/admin/list">Mensajes</a>
+            <a href="/ingreso/perfil/edit">Editar Perfil</a>
+            <a href="#">Mensajes</a>
             
           </div>
         </div>
