--- a/site/views/Admin/productDetailAdmin.ejs
+++ b/site/views/Admin/productDetailAdmin.ejs
@@ -14,79 +14,91 @@
 
 
         <div class="contenedor-formulario-admin">
+<div class="form-admin">
+  <div class="form-header">
+    <h1 class="form-title">D<span>etalle Producto</span> ID <%- product.id %>
+    </h1>
+  </div>
+  <img src="/images/<%- product.image %> " alt="">
+  <label for="nombre" class="form-label">Nombre:</label>
+  <p class="form-input">
+    <%- product.title %>
+  </p>
+  <label for="precio" class="form-label">Precio:</label>
+  <p class="form-input">$<%- toThousand(product.price) %>
+  </p>
+  <label for="descripcio" class="form-label">Descripción:</label>
+  <p class="form-input">
+    <%- product.description %>
+  </p>
+  <label for="clase-de-vino" class="form-label">Tipo de Vino:</label>
+  <p class="form-input">
+    <% if (product.product_category_id == 1) { %>
+      Tinto
+      <% } else { %>   
+       Blanco
+     <% } %>        
+  </p>
+  <label for="descuento" class="form-label">Descuento:</label>
+  <p class="form-input">
+    <%- product.discount %> 
+  </p>
+  <label for="descuento" class="form-label">Envío Gratis</label>
+  <% if (product.free_shipping) { %>
+    
+    <p class="form-input">Si</p>
+    <% } else { %>
+      
+      <p class="form-input">No</p>
+    <% } %>
+      
+      <h2 class="form-title">C<span>aracterísticas</span></h2>
+      <label for="varietal" class="form-label">Varietal:</label>
+      <p class="form-input"><%- feature.varietal %> </p>
+      <label for="number" class="form-label">Añada:</label>
+      <p class="form-input"><%- feature.vintage %> </p>
+      <label for="barrica" class="form-label">Tipo de Barrica:</label>
+      <p class="form-input"><%- feature.type_of_barrel %> </p>
+      <label for="tiempo" class="form-label">Tiempo en botella:</label>
+      <p class="form-input"><%- feature.time_in_bottle %> </p>
+      <label for="tiempo" class="form-label">Tipo de Cosecha:</label>
+      <p class="form-input"><%- feature.harvest %> </p>
+      <label for="terroir" class="form-label">Terroir:</label>
+      <p class="form-input"><%- feature.terroir %> </p>
+      <label for="terroir" class="form-label">Finca:</label>
+      <p class="form-input"><%- feature.finca %> </p>
+      
 
-          <form action="/admin/products/delete/<%- product.id %>?_method=DELETE " method="POST" class="form-admin">
-            <div class="form-header">
-              <h1 class="form-title">D<span>etalle Producto</span> ID <%- product.id %>
-              </h1>
-            </div>
-            <img src="/images/<%- product.image %> " alt="">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <p class="form-input">
-              <%- product.title %>
-            </p>
-            <label for="precio" class="form-label">Precio:</label>
-            <p class="form-input">$<%- toThousand(product.price) %>
-            </p>
-            <label for="descripcio" class="form-label">Descripción:</label>
-            <p class="form-input">
-              <%- product.description %>
-            </p>
-            <label for="clase-de-vino" class="form-label">Tipo de Vino:</label>
-            <p class="form-input">
-              <% if (product.product_category_id == 1) { %>
-                Tinto
-                <% } else { %>   
-                 Blanco
-               <% } %>        
-            </p>
-            <label for="descuento" class="form-label">Descuento:</label>
-            <p class="form-input">
-              <%- product.discount %> 
-            </p>
-            <label for="descuento" class="form-label">Envío Gratis</label>
-            <% if (product.free_shipping) { %>
+
+      <h2 class="form-title">N<span>otas de Cata</span></h2>
+      <label for="color" class="form-label">Color:</label>
+      <p class="form-input"><%- tastingNote.color %> </p>
+      <label for="aroma" class="form-label">Aroma:</label>
+      <p class="form-input"><%- tastingNote.smell %> 
+      </p>
+      <label for="sabor" class="form-label">Sabor:</label>
+      <p class="form-input"><%- tastingNote.taste %> 
+      </p>
+
+      <div class="container-btn-delete"><form action="/admin/products/edit/<%- product.id %>" method="GET">
+        <input type="submit" class="btn-edit-admin" value="Editar"></form></div>
+      
+      
+      <div class="container-btn-delete"><form action="/admin/products/delete/<%- product.id %>?_method=DELETE " method="POST"><input type="submit" class="btn-delete-admin" value="Eliminar"></form></div>
+
+</div>
+</div>     
+            
+                
               
-              <p class="form-input">Si</p>
-              <% } else { %>
                 
-                <p class="form-input">No</p>
-              <% } %>
                 
-                <h2 class="form-title">C<span>aracterísticas</span></h2>
-                <label for="varietal" class="form-label">Varietal:</label>
-                <p class="form-input"><%- feature.varietal %> </p>
-                <label for="number" class="form-label">Añada:</label>
-                <p class="form-input"><%- feature.vintage %> </p>
-                <label for="barrica" class="form-label">Tipo de Barrica:</label>
-                <p class="form-input"><%- feature.type_of_barrel %> </p>
-                <label for="tiempo" class="form-label">Tiempo en botella:</label>
-                <p class="form-input"><%- feature.time_in_bottle %> </p>
-                <label for="tiempo" class="form-label">Tipo de Cosecha:</label>
-                <p class="form-input"><%- feature.harvest %> </p>
-                <label for="terroir" class="form-label">Terroir:</label>
-                <p class="form-input"><%- feature.terroir %> </p>
-                <label for="terroir" class="form-label">Finca:</label>
-                <p class="form-input"><%- feature.finca %> </p>
+              
                 
-
-
-                <h2 class="form-title">N<span>otas de Cata</span></h2>
-                <label for="color" class="form-label">Color:</label>
-                <p class="form-input"><%- tastingNote.color %> </p>
-                <label for="aroma" class="form-label">Aroma:</label>
-                <p class="form-input"><%- tastingNote.smell %> 
-                </p>
-                <label for="sabor" class="form-label">Sabor:</label>
-                <p class="form-input"><%- tastingNote.taste %> 
-                </p>
-
-                <div class="btn-edit-admin"><a href="/admin/products/edit/<%- product.id %>">Editar</a></div>
-
-                <div class="container-btn-delete" action="">
-                  <input type="submit" class="btn-delete-admin" value="Eliminar"></div>
-          </form>
-        </div>
+                
+                
+             
+        
 
         <%- include('./partials/footer') %>
       </body>
