--- a/site/views/Admin/productEdit.ejs
+++ b/site/views/Admin/productEdit.ejs
@@ -91,7 +91,7 @@
 
 
 
-    <input type="submit" class="btn-submit-admin" value="Cargar producto nuevo">
+    <input type="submit" class="btn-submit-admin" value="Actualizar Producto">
 
 
   </form>
