--- a/site/views/Admin/partials/header.ejs
+++ b/site/views/Admin/partials/header.ejs
@@ -80,7 +80,7 @@
           <div class="subnav-content">
             
             <a href="#link1">Mi perfil</a>
-            <a href="#link2">Administrar Usuarios</a>
+            <a href="/admin/userList">Administrar Usuarios</a>
             <a href="/admin/list">Mensajes</a>
               
           </div>
