--- a/site/views/Users/partials/header.ejs
+++ b/site/views/Users/partials/header.ejs
@@ -78,7 +78,7 @@
           <button class="subnavbtn">Configuración General<i class="fa fa-caret-down"></i></button>
           <div class="subnav-content">
             
-            <a href="#link1">Mi perfil</a>
+            <a href="/ingreso/perfil">Mi perfil</a>
             <a href="/ingreso/perfil/edit">Editar Perfil</a>
             <a href="#">Mensajes</a>
             
