mi perfil completo actualizado

--- a/site/views/Admin/partials/header.ejs
+++ b/site/views/Admin/partials/header.ejs
@@ -79,7 +79,7 @@
           <button class="subnavbtn">Configuración General <i class="fa fa-caret-down"></i></button>
           <div class="subnav-content">
             
-            <a href="#link1">Mi perfil</a>
+            <a href="/ingreso/perfil">Mi perfil</a>
             <a href="/admin/userList">Administrar Usuarios</a>
             <a href="/admin/list">Mensajes</a>
               
