--- a/site/views/Admin/productDetailAdmin.ejs
+++ b/site/views/Admin/productDetailAdmin.ejs
@@ -9,9 +9,8 @@
     <!-- Header -->
     <%- include('./partials/header') %>
       <!-- /Header -->
-
-      <body style="background-color:gray;">
-
+      <div class="management-index-background-3">
+        <div class="filter-black-management">
 
         <div class="contenedor-formulario-admin">
 <div class="form-admin">
@@ -99,7 +98,7 @@
                 
              
         
-
+</div></div>
         <%- include('./partials/footer') %>
       </body>
 
