--- a/site/views/Admin/productList.ejs
+++ b/site/views/Admin/productList.ejs
@@ -9,9 +9,10 @@
 	<%- include('./partials/header') %>
 	<!-- /Header -->
 
-<body style="background-color:gray;">
 
 
+  <div class="management-index-background-2">
+    <div class="filter-black-management">
   <div class="container-product-list-admin">
    
    
@@ -49,7 +50,7 @@
   </div>
 
 
-  <%- include('./partials/footer')  %> 
+</div> </div>
 </body>
 
 </html>
