--- a/site/views/Admin/productLoad.ejs
+++ b/site/views/Admin/productLoad.ejs
@@ -9,7 +9,9 @@
 	<%- include('./partials/header') %>
 	<!-- /Header -->
 
-<body style="background-color:gray;">
+
+  <div class="management-index-background-4">
+    <div class="filter-black-management">
   <div class="contenedor-formulario-admin">
     <form action="/admin/products/create" method="POST" class="form-admin" enctype="multipart/form-data">
       <div class="form-header">
@@ -128,7 +130,7 @@
 
     </form>
   </div>
-
+</div></div>
   <%- include('./partials/footer')  %> 
 <script src="/javascripts/ButtonImage.js"></script>
 
