--- a/site/views/Admin/results.ejs
+++ b/site/views/Admin/results.ejs
@@ -9,7 +9,8 @@
 	<%- include('./partials/header') %>
 	<!-- /Header -->
 
-<body style="background-color:gray;">
+  <div class="management-index-background-3">
+    <div class="filter-black-management">
 
   
   <div class="container-product-list-admin">
@@ -46,7 +47,7 @@
     
 
     
-  </div>
+  </div></div></div>
 
 
   <%- include('./partials/footer')  %> 
