--- a/site/views/Admin/userDetail.ejs
+++ b/site/views/Admin/userDetail.ejs
@@ -10,7 +10,8 @@
     <%- include('./partials/header') %>
       <!-- /Header -->
 
-      <body style="background-color:gray;">
+      <div class="management-index-background-4">
+        <div class="filter-black-management">
 
 
         <div class="contenedor-formulario-admin">
@@ -76,7 +77,7 @@
       
 </div>
 </div>     
-    
+    </div></div>
         <%- include('./partials/footer') %>
       </body>
 
