--- a/site/views/Admin/userList.ejs
+++ b/site/views/Admin/userList.ejs
@@ -8,8 +8,8 @@
   <!-- Header -->
 	<%- include('./partials/header') %>
 	<!-- /Header -->
-
-<body style="background-color:gray;">
+  <div class="management-index-background-3">
+    <div class="filter-black-management">
 
 
   <div class="container-product-list-admin">
@@ -43,7 +43,7 @@
     
   </div>
 
-
+</div></div>
   <%- include('./partials/footer')  %> 
 </body>
 
