--- a/site/views/Admin/adminFilter.ejs
+++ b/site/views/Admin/adminFilter.ejs
@@ -9,15 +9,19 @@
         <%- include('./partials/header') %>
         <!-- /Header -->
     
+        <div class="management-index-background">
+          <div class="filter-black-management">
     
-    <body style="background-color:gray;">
     <div class="conteiner-index-admin">
       <form action="/admin/search" method="GET"><div class="wrapper">
         <input type="text" name= "search" class="input" 
         placeholder="Ingrese nombre del producto">
         <button type="submit" class="searchbtn"><i class="fa fa-search"></i></button>
       </div></form>
-    </div>
+    </div></div></div>
+
+
+
     <%- include('./partials/footer')  %> 
     </body>
     
