--- a/site/views/Admin/messagesList.ejs
+++ b/site/views/Admin/messagesList.ejs
@@ -10,8 +10,9 @@
     <%- include('./partials/header') %>
       <!-- /Header -->
 
-      <body style="background-color:gray;">
-
+      
+        <div class="management-index-background">
+          <div class="filter-black-management">
 
         <div class="container-product-list-admin">
           <% if (messages.length===0) { %>
@@ -74,7 +75,7 @@
         </div>
 
 
-        <%- include('./partials/footer') %>
+       </div></div>
       </body>
 
 </html>
