--- a/site/views/Users/usersIndex.ejs
+++ b/site/views/Users/usersIndex.ejs
@@ -15,7 +15,7 @@
 <div class="management-index-background">
   <div class="filter-black-management">
   <div class="container-management-index">
-<div class="conteiner-index-admin">
+<div class="conteiner-index-admin2">
   <h1>BIENVENID<% if (user.sex_id == 1) { %>O<% }else{ %>A<%}  %>   <span style="color: crimson;"><%= user.name.toUpperCase() %></span></h1>
 </div>
 <div class="avatar-usuario"><img src="/images/<%- user.avatar %> " alt=""></div></div>
